--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,39 @@ body {
   font-family: 'Lora', serif;
   font-style: italic;
   box-sizing: border-box;
+  background-color: var(--body-color);
+}
+
+:root {
+  --body-color: white;
+  --nav-color: #f5f6ee;
+  --navtxt-color: #0f1d2b;
+  --articlesbg-color: linear-gradient(to bottom,
+      #f3e9bd,
+      #ecd180);
+
+  --aboutbg-color:linear-gradient(to top left,
+  #f3e1cd,
+  #ecd180);
+
+  --abouttxt-color:rgb(0, 0, 190);
+}
+
+
+.darktheme {
+  --body-color: #121212;
+  --nav-color: #22231d;
+  --navtxt-color: white;
+  --articlesbg-color: #473901;
+  --aboutbg-color:linear-gradient(to left ,
+  #473901,
+  #22231d);
+  --abouttxt-color:white;
+}
+
+#icon {
+  width: 30px;
+  cursor: pointer;
 }
 
 .nav-menu {
@@ -15,7 +48,7 @@ body {
 }
 
 .nav-item .nav-link {
-  color: #0f1d2b;
+  color: var(--navtxt-color);
 }
 
 .nav-item .nav-link:hover {
@@ -40,7 +73,7 @@ body {
 }
 
 .nav-active {
-  background-color: #f5f6ee;
+  background-color: var(--nav-color);
   box-shadow: 5px -1px 12px -5px gray;
 }
 
@@ -61,7 +94,7 @@ body {
   left: 31%;
   border: 3px solid #ffb000;
   padding: 15px;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 .title h1 {
@@ -73,7 +106,7 @@ body {
 }
 
 .title p {
-  color:white;
+  color: white;
   font-size: 30px;
   font-weight: 600;
 }
@@ -112,7 +145,8 @@ body {
   padding: 10px 50px;
   border-width: 3px;
   border-style: solid;
-  border-color: rgb(94, 90, 94);
+  border-radius: 15px ;
+  border-color: #ecd180;
   color: rgb(70, 67, 70);
   background-color: white;
   cursor: pointer;
@@ -120,7 +154,7 @@ body {
 }
 
 .btn1:hover {
-  background-color: #17456b;
+  background-color: #ffb000;
   color: white;
   border-color: white;
 }
@@ -165,7 +199,7 @@ body {
 }
 
 .ourimg:hover {
-  color: rgb(72, 9, 243);
+  color: #ecd180;
   transform: scale(1.1);
   font-size: x-large;
 }
@@ -239,7 +273,7 @@ body {
   padding-top: 5%;
   padding-bottom: 5%;
   padding-left: 15%;
-  background-color: #f5f6ee;
+  background-color: var(--nav-color);
   border-radius: 15px;
 }
 
@@ -249,7 +283,7 @@ body {
   padding-top: 5%;
   padding-bottom: 5%;
   padding-left: 15%;
-  background-color: #f5f6ee;
+  background-color: var(--nav-color);
   border-radius: 15px;
 }
 
@@ -341,6 +375,7 @@ body {
 
 .offer-cont {
   position: relative;
+  color: var(--navtxt-color);
 }
 
 
@@ -352,9 +387,7 @@ body {
   height: 750px;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  background: linear-gradient(to bottom,
-      #f3e9bd,
-      #ecd180);
+  background: var(--articlesbg-color);
   animation-name: slide-up;
   animation: slide-up 0.9s cubic-bezier(0.65, 0, 0.35, 1) both;
 }
@@ -408,6 +441,7 @@ body {
   width: 22%;
   margin: 10px;
   padding: 10px;
+  color: var(--navtxt-color);
 }
 
 .articleimg {
@@ -456,7 +490,7 @@ body {
 
 /*  */
 
-.slider{
+.slider {
   margin-top: 50px;
 
 }
@@ -552,9 +586,7 @@ button.owl-prev:hover {
   margin-bottom: 100px;
   margin-top: 100px;
   display: flex;
-  background: linear-gradient(to top left,
-      #f3e1cd,
-      #ecd180);
+  background: var(--aboutbg-color);
   border-radius: 0 120px 0 120px;
   overflow: hidden;
   position: relative;
@@ -579,7 +611,7 @@ button.owl-prev:hover {
 .column {
   padding-top: 7%;
   padding-left: 2%;
-  color: rgb(0, 0, 190);
+  color: var(--abouttxt-color);
   transform: translateX(145%);
   width: 500px;
   font-style: normal;
@@ -601,8 +633,8 @@ button.owl-prev:hover {
 .footer {
   height: 200px;
   margin-top: 100px;
-  background-color: #f5f6ee;
-  color: black;
+  background-color: var(--nav-color);
+  color: var(--navtxt-color);
   display: flex;
   flex-direction: row;
 
@@ -649,6 +681,9 @@ button.owl-prev:hover {
 
 }
 
+.icon{
+  width: 24px;
+}
 
 .copyrights {
   /* color: white; */
@@ -657,11 +692,11 @@ button.owl-prev:hover {
 }
 
 a {
-  width: 6vw;
+  width: 7vw;
   text-align: center;
   font-size: medium;
   text-decoration: none;
-  color: black;
+  color: var(--navtxt-color);
 }
 
 a:hover {
